--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "memory-game",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.2.3",
-    "rambda": "^6.7.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
+	"name": "memory-game",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "10.2.3",
+		"rambda": "^6.7.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@types/react": "17.0.11",
+		"eslint": "7.29.0",
+		"eslint-config-next": "11.0.0",
+		"typescript": "4.3.4"
+	}
 }
